# ocaml-opentelemetry

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  Makefile  README.md  dune  dune-project  opentelemetry-client-cohttp-eio.opam  opentelemetry-client-cohttp-lwt.opam  opentelemetry-client-ocurl-lwt.opam  opentelemetry-cohttp-lwt.opam  opentelemetry-lwt.opam  opentelemetry.opam
.github/: CODEOWNERS
.github/workflows/: format.yml  gh-pages.yml  main.yml
doc/: migration_guide_v0.13.md
src/ambient-context/: basic_map.ml  dune  opentelemetry_ambient_context.ml
src/ambient-context/core/: dune
src/ambient-context/eio/: dune
src/ambient-context/tls/: dune
src/client/: batch.ml  batch.mli  bounded_queue.ml  consumer.ml  dune  emitter_add_batching.mli  emitter_batch.ml  emitter_combine.ml  emitter_limit_interval.ml  emitter_limit_interval.mli  emitter_sample.ml  emitter_sample.mli  export_error.ml  exporter_add_batching.ml  exporter_batch.ml  exporter_batch.mli  exporter_combine.ml  exporter_config.ml  exporter_config.mli  exporter_debug.ml  exporter_queued.ml  exporter_stdout.ml  generic_consumer.ml  generic_consumer_exporter.ml  generic_http_consumer.ml  generic_io.ml  generic_notifier.ml  http_config.ml  http_config.mli  resource_signal.ml  resource_signal.mli  sampler.ml  sampler.mli  self_trace.ml  self_trace.mli  util_resources.ml  util_thread.ml
src/client-cohttp-eio/: dune  opentelemetry_client_cohttp_eio.ml  opentelemetry_client_cohttp_eio.mli
src/client-cohttp-lwt/: dune  opentelemetry_client_cohttp_lwt.ml  opentelemetry_client_cohttp_lwt.mli
src/client-ocurl/: config.ml  config.mli  dune  opentelemetry_client_ocurl.ml  opentelemetry_client_ocurl.mli
src/client-ocurl-lwt/: config.ml  config.mli  dune  opentelemetry_client_ocurl_lwt.ml  opentelemetry_client_ocurl_lwt.mli
src/client/lwt/: dune  notifier_lwt.ml  types_.ml.5  types_.ml.6  util_ambient_context.ml  util_ticker.ml
src/client/sync/: bounded_queue_sync.ml  dune  io_sync.mli  notifier_sync.ml  shutdown_sync.ml  util_thread.ml
src/core/: clock.ml  dune  event.ml  exporter.ml  instrument.ml  instrument.mli  log_record.ml  metrics.ml  rand_bytes.ml  span.ml  span.mli  span_ctx.ml  span_ctx.mli  timestamp_ns.ml
src/emitter/: dune  emitter.ml  to_list.ml
src/integrations/cohttp/: dune  opentelemetry_cohttp_lwt.ml
src/integrations/logs/: opentelemetry_logs.ml
src/lib/: ambient_span.ml  batch.ml  batch.mli  dune  dynamic_enricher.ml  emitter_batch.ml  gc_metrics.ml  gc_metrics.mli  gen_git_index_path.sh  gen_version.sh  globals.ml  interval_limiter.ml  interval_limiter.mli  log_provider.ml  logger.ml  main_exporter.ml  meter.ml  meter.mli  meter_provider.ml  metrics_callbacks.ml  metrics_emitter.ml  opentelemetry.ml  provider_config.ml  provider_config.mli  scope_attributes.ml  sdk.ml  self_debug.ml  self_debug.mli  trace_provider.ml  tracer.ml  version.mli
src/lwt/: dune  opentelemetry_lwt.ml
src/proto/: common.ml  common.mli  dune  logs.ml  logs.mli  logs_service.ml  logs_service.mli  metrics.ml  metrics.mli  metrics_service.ml  metrics_service.mli  resource.ml  resource.mli  status.ml  status.mli  trace.ml  trace.mli  trace_service.ml  trace_service.mli
src/ptime/: dune  opentelemetry_ptime.ml
src/trace/: common_.ml  dune  opentelemetry_trace.ml  opentelemetry_trace.mli
src/util/: dune  timestamp_ns.ml
tests/client/: test_client_lib.ml
tests/client_e2e/: clients_e2e_lib.ml  dune  signal_gatherer.ml  signal_gatherer.mli  signal_reporter_server.ml  test_cohttp_eio_client_e2e.ml  test_cohttp_lwt_client_e2e.ml  test_ocurl_client_e2e.ml  test_ocurl_lwt_client_e2e.ml
tests/cohttp/: dune
tests/core/: dune  t_histogram.expected  t_histogram.ml  test_span_dummy.expected  test_span_dummy.ml
tests/implicit_scope/sync/: dune  test_implicit_scope_sync.ml
tests/logs/: test_logs_e2e.expected  test_logs_e2e.ml
tests/ocurl/: dune
