(library
 (name opentelemetry_client_cohttp_eio)
 (public_name opentelemetry-client-cohttp-eio)
 (synopsis "Opentelemetry collector using cohttp+eio+unix")
 (enabled_if
  (>= %{ocaml_version} 5.0))
 (libraries
  (re_export opentelemetry)
  opentelemetry.ptime
  (re_export opentelemetry-client)
  (re_export eio)
  (re_export eio.core)
  (re_export eio.unix)
  (re_export cohttp)
  (re_export cohttp-eio)
  (re_export tls-eio)
  fmt
  tls
  domain-name
  uri
  pbrt
  threads
  mtime
  mtime.clock.os
  ca-certs
  mirage-crypto-rng.unix))
