(library
 (name opentelemetry_client_cohttp_lwt)
 (public_name opentelemetry-client-cohttp-lwt)
 (synopsis "Opentelemetry collector using cohttp+lwt+unix")
 (preprocess
  (pps lwt_ppx))
 (libraries
  (re_export opentelemetry)
  (re_export opentelemetry-client)
  opentelemetry-client.lwt
  (re_export lwt)
  (re_export cohttp-lwt)
  (re_export cohttp-lwt-unix)
  (re_export cohttp)
  uri
  threads
  pbrt
  mtime
  mtime.clock.os))
