(library
 (name opentelemetry_client_ocurl_lwt)
 (public_name opentelemetry-client-ocurl-lwt)
 (synopsis "Opentelemetry collector using ezcurl-lwt")
 (preprocess
  (pps lwt_ppx))
 (libraries
  (re_export opentelemetry)
  opentelemetry.atomic
  (re_export opentelemetry-client)
  (re_export opentelemetry-client.sync)
  (re_export opentelemetry-client.lwt)
  threads
  pbrt
  mtime
  mtime.clock.os
  (re_export curl)
  (re_export ezcurl-lwt)
  (re_export ezcurl.core)
  (re_export lwt)
  (re_export lwt.unix)))
