(library
 (name opentelemetry_client)
 (public_name opentelemetry-client)
 (flags :standard -open Opentelemetry_util -open Opentelemetry_atomic)
 (libraries
  opentelemetry
  opentelemetry.util
  opentelemetry.emitter
  opentelemetry.proto
  opentelemetry.domain
  mtime
  mtime.clock.os
  unix
  pbrt
  threads.posix)
 (synopsis
  "Basic exporters, as well as common types and logic shared between exporters"))
