(library
 (name opentelemetry_core)
 (public_name opentelemetry.core)
 (synopsis "Core types and definitions for opentelemetry")
 (flags
  :standard
  -warn-error
  -a+8
  -open
  Opentelemetry_util
  -open
  Opentelemetry_atomic)
 (libraries
  (re_export opentelemetry.proto)
  opentelemetry.util
  (re_export opentelemetry.atomic)
  (re_export opentelemetry.emitter)
  pbrt
  threads
  ptime
  ptime.clock.os
  mtime
  hmap))
