(library
 (name opentelemetry_emitter)
 (public_name opentelemetry.emitter)
 (libraries
  (re_export opentelemetry.proto)
  (re_export opentelemetry.util)
  (re_export opentelemetry.atomic)
  (re_export mtime))
 (flags :standard -open Opentelemetry_atomic)
 (synopsis "Modular emitters for a single signal at a time"))
