(rule
 (target .git_index_path)
 (deps (universe) gen_git_index_path.sh)
 (action
  (with-stdout-to
   .git_index_path
   (run sh gen_git_index_path.sh))))

(rule
 (target .git_index.lnk)
 (action
  (run ln -sf %{read-lines:.git_index_path} %{target})))

(rule
 (target version.ml)
 (deps
  (file .git_index.lnk)
  gen_version.sh)
 (action
  (with-stdout-to
   version.ml
   (run sh gen_version.sh))))

(library
 (name opentelemetry)
 (public_name opentelemetry)
 (synopsis "API for opentelemetry instrumentation")
 (flags
  :standard
  -warn-error
  -a+8
  -open
  Opentelemetry_util
  -open
  Opentelemetry_core
  -open
  Opentelemetry_core.Common_
  -open
  Opentelemetry_atomic)
 (libraries
  (re_export opentelemetry.core)
  (re_export opentelemetry.proto)
  (re_export opentelemetry.util)
  (re_export opentelemetry.ambient-context)
  (re_export opentelemetry.atomic)
  (re_export hmap)
  mtime
  mtime.clock.os
  pbrt
  unix
  threads))
