(env
 (_
  ; Make the binaries for the test emitters available on the path for the components defined in this dir.
  ; See https://dune.readthedocs.io/en/stable/reference/dune/env.html
  (binaries
   (../bin/emit1.exe as emit1)
   (../bin/emit1_cohttp.exe as emit1_cohttp)
   (../bin/emit1_ocurl_lwt.exe as emit1_ocurl_lwt)
   (../bin/emit1_eio.exe as emit1_eio)
   (./gather_signals.exe as gather_signals))))

(library
 (name signal_gatherer)
 (modules signal_gatherer)
 (libraries
  (re_export str)
  (re_export alcotest)
  (re_export cohttp)
  conduit-lwt
  conduit-lwt-unix
  (re_export cohttp-lwt)
  (re_export cohttp-lwt-unix)
  (re_export fmt)
  (re_export unix)
  (re_export containers)
  logs.fmt
  logs.threaded
  (re_export lwt)
  (re_export lwt.unix)
  (re_export opentelemetry)
  (re_export opentelemetry-client)))

(library
 (name clients_e2e_lib)
 (modules clients_e2e_lib)
 (libraries alcotest lwt lwt.unix signal_gatherer))

(tests
 (names test_cohttp_lwt_client_e2e)
 (modules test_cohttp_lwt_client_e2e)
 (package opentelemetry-client-cohttp-lwt)
 (deps %{bin:emit1_cohttp})
 (libraries clients_e2e_lib alcotest opentelemetry opentelemetry-client))

(tests
 (names test_cohttp_eio_client_e2e)
 (modules test_cohttp_eio_client_e2e)
 (package opentelemetry-client-cohttp-eio)
 (deps %{bin:emit1_eio})
 (enabled_if
  (>= %{ocaml_version} 5.0))
 (libraries clients_e2e_lib alcotest opentelemetry opentelemetry-client))

(tests
 (names test_ocurl_client_e2e)
 (modules test_ocurl_client_e2e)
 (package opentelemetry-client-ocurl)
 (deps %{bin:emit1})
 (libraries clients_e2e_lib alcotest opentelemetry opentelemetry-client))

(tests
 (names test_ocurl_lwt_client_e2e)
 (modules test_ocurl_lwt_client_e2e)
 (package opentelemetry-client-ocurl-lwt)
 (deps %{bin:emit1_ocurl_lwt})
 (libraries clients_e2e_lib alcotest opentelemetry opentelemetry-client))

(executable
 (name signal_reporter_server)
 (modules signal_reporter_server)
 (libraries signal_gatherer lwt lwt.unix))
