(library
 (name opentelemetry_ambient_context_eio)
 (public_name opentelemetry.ambient-context.eio)
 (synopsis
  "Storage backend for ambient-context using Eio's fibre-local storage")
 (optional) ; eio
 (libraries
  (re_export eio)
  (re_export eio.core)
  hmap
  (re_export opentelemetry.ambient-context.core)))
